--- a/etc/supervisord.d/kibana.ini
+++ b/etc/supervisord.d/kibana.ini
@@ -1,4 +1,4 @@
 [program:kibana]
-command = /opt/kibana/bin/kibana
+command = /opt/qnib/kibana/bin/start_kibana.sh
 redirect_stderr=true
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
