new restore function

--- a/etc/supervisord.d/kibana4.ini
+++ b/etc/supervisord.d/kibana4.ini
@@ -1,4 +1,4 @@
-[program:kibana]
-command = /opt/qnib/kibana/bin/start_kibana.sh
+[program:kibana4]
+command = /opt/qnib/kibana4/bin/start.sh
 redirect_stderr=true
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
