--- a/etc/supervisord.d/kibana4_restore.ini
+++ b/etc/supervisord.d/kibana4_restore.ini
@@ -1,5 +1,5 @@
-[program:kibana_restore]
-command = /opt/qnib/bin/kibana_restore.sh
+[program:kibana4_restore]
+command = /opt/qnib/kibana4/bin/restore.sh
 redirect_stderr=true
 startsecs=1
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
